[workspace]
resolver = "2"
members = [
    "tools/math",
    "tools/statistics",
    "tools/geospatial-distance",
    "tools/geospatial-bearing",
    "tools/geospatial-point-in-polygon",
    "composed/pythagorean-middleware",
    "composed/distance-calculator",
    "composed/variance-middleware",
    "composed/stddev-middleware",
    "composed/route-optimizer",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
wit-bindgen = "0.46.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
