[package]
name = "pythagorean-middleware"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wasmcp:pythagorean-middleware"

[package.metadata.component.target]
path = "wit"

